--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "cloudio",
     "displayName": "CloudIO",
     "description": "Develop IO Pages",
-    "version": "0.83.0",
+    "version": "0.89.0",
     "publisher": "cloudiotools",
     "engines": {
         "vscode": "^1.14.0"
@@ -32,7 +32,7 @@
         "commands": [
             {
                 "command": "extension.cloudio",
-                "title": "CloudIO Project"
+                "title": "CloudIO"
             }
         ]
     },
